--- a/CafeRiders/app/src/main/res/layout/activity_bike_detail.xml
+++ b/CafeRiders/app/src/main/res/layout/activity_bike_detail.xml
@@ -20,12 +20,14 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
+            android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:layout_height="40dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:text="24th Sep 2014"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="20dp"
                 android:layout_height="wrap_content" />
@@ -35,17 +37,16 @@
                 android:scaleType="fitXY"
                 android:layout_marginLeft="10dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/arrow_right_thick"
+                android:src="@drawable/arrow_right"
                 android:tint="@color/gray"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:text="25th Sep 2014"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:layout_gravity="center_vertical|right"
                 android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_height="wrap_content" />
-
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,23 +61,23 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:text="10 AM"
-                android:textSize="18dp"
-                android:layout_gravity="center_vertical"
+                android:textSize="15dp"
+                android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_height="wrap_content" />
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:scaleType="fitXY"
                 android:layout_gravity="center"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="40dp"
                 android:src="@drawable/alarm_check"
                 android:tint="@color/gray"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:text="11 AM"
-                android:textSize="18dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
+                android:textSize="15dp"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_marginLeft="40dp"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
@@ -97,7 +98,7 @@
             android:layout_height="100dp" />
         <TextView
             android:layout_width="wrap_content"
-            android:text="KTM RC"
+            android:text="Thunderbird"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:gravity="center"
@@ -114,14 +115,14 @@
             <Button
                 android:layout_width="120dp"
                 android:backgroundTint="@color/dark_gray"
-                android:text="200 CC"
+                android:text="350 CC"
                 android:textColor="@color/white"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_button_left"/>
             <Button
                 android:layout_width="120dp"
                 android:backgroundTint="@color/background3"
-                android:text="390 CC"
+                android:text="500 CC"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_button_right"/>
         </LinearLayout>
@@ -137,20 +138,23 @@
                 android:orientation="vertical"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" />
+                    android:layout_width="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/speedometer"
+                    android:layout_height="50dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
                     android:textSize="18dp"
-                    android:text="35Kmpl"/>
+                    android:text="80 Kmph"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_gravity="center"
                     android:layout_height="wrap_content"
                     android:textSize="12dp"
-                    android:text="milege"/>
+                    android:text="Speed Limit"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -158,12 +162,15 @@
                 android:layout_marginLeft="10dp"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" />
+                    android:layout_width="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/shield_key"
+                    android:layout_height="50dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
                     android:textSize="18dp"
                     android:text="\u20B90"/>
                 <TextView
@@ -181,14 +188,17 @@
                 android:layout_marginLeft="10dp"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" />
+                    android:layout_width="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/cash_100"
+                    android:layout_height="50dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18dp"
+                    android:layout_marginTop="10dp"
                     android:layout_gravity="center"
-                    android:text="\u20B9200/day"/>
+                    android:text="\u20B9500/day"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -201,7 +211,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="BOOK NOW"
+            android:text="CONFIRM BOOKING"
             android:textColor="@color/white"
             android:textAlignment="center"
             android:id="@+id/book_now"
