--- a/CafeRiders/app/src/main/res/drawable/arrow_left.xml
+++ b/CafeRiders/app/src/main/res/drawable/arrow_left.xml
@@ -1,8 +1,8 @@
-<!-- drawable/arrow_right_thick.xml -->
+<!-- drawable/arrow_left.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#000" android:pathData="M4,10V14H13L9.5,17.5L11.92,19.92L19.84,12L11.92,4.08L9.5,6.5L13,10H4Z" />
+    <path android:fillColor="#FFF" android:pathData="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z" />
 </vector>
