--- a/CafeRiders/app/src/main/res/drawable/chevron_right.xml
+++ b/CafeRiders/app/src/main/res/drawable/chevron_right.xml
@@ -1,8 +1,8 @@
-<!-- drawable/arrow_left_thick.xml -->
+<!-- drawable/chevron_right.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#000" android:pathData="M20,10V14H11L14.5,17.5L12.08,19.92L4.16,12L12.08,4.08L14.5,6.5L11,10H20Z" />
+    <path android:fillColor="#000" android:pathData="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" />
 </vector>
