--- a/CafeRiders/app/src/main/res/layout/activity_bike_list.xml
+++ b/CafeRiders/app/src/main/res/layout/activity_bike_list.xml
@@ -19,34 +19,33 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
+            android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:layout_height="40dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:text="24th Sep 2014"
-                android:textSize="18dp"
-
+                android:textSize="15dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_height="wrap_content" />
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="30dp"
+                android:layout_width="30dp"
+                android:layout_height="20dp"
                 android:scaleType="fitXY"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/arrow_right_thick"
+                android:src="@drawable/arrow_right"
                 android:tint="@color/gray"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:text="25th Sep 2014"
-                android:textSize="18dp"
-                android:layout_gravity="center_vertical"
+                android:textSize="15dp"
+                android:layout_gravity="center_vertical|right"
                 android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_height="wrap_content" />
-
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,7 +60,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:text="10 AM"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:layout_gravity="center_vertical"
                 android:layout_height="wrap_content" />
             <ImageView
@@ -69,15 +68,15 @@
                 android:layout_height="30dp"
                 android:scaleType="fitXY"
                 android:layout_gravity="center"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="40dp"
                 android:src="@drawable/alarm_check"
                 android:tint="@color/gray"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:text="11 AM"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="40dp"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
@@ -87,6 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layoutAnimation="@anim/layout_animation_slide_right"
         android:id="@+id/bike_list">
     </android.support.v7.widget.RecyclerView>
 
