--- a/CafeRiders/app/src/main/res/layout/activity_home_page.xml
+++ b/CafeRiders/app/src/main/res/layout/activity_home_page.xml
@@ -45,8 +45,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.61">
+            android:gravity="center"
+            android:layout_height="wrap_content">
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -68,39 +68,39 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="-10dp"
                     android:layout_height="wrap_content">
                     <ImageView
-                        android:layout_width="170dp"
-                        android:scaleType="fitXY"
+                        android:layout_width="150dp"
                         android:layout_marginLeft="5dp"
                         android:layout_height="150dp"
+                        android:id="@+id/bike1"
                         android:src="@drawable/bike1"/>
                     <ImageView
-                        android:layout_width="170dp"
-                        android:scaleType="fitXY"
+                        android:layout_width="150dp"
                         android:layout_marginLeft="5dp"
                         android:layout_height="150dp"
+                        android:id="@+id/bike2"
                         android:src="@drawable/bike2"/>
 
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="-35dp"
                     android:layout_marginBottom="10dp"
                     android:layout_height="wrap_content">
                     <ImageView
-                        android:layout_width="170dp"
-                        android:scaleType="fitXY"
+                        android:layout_width="150dp"
                         android:layout_marginLeft="5dp"
+                        android:id="@+id/bike3"
                         android:layout_height="150dp"
                         android:src="@drawable/bike3"/>
                     <ImageView
-                        android:layout_width="170dp"
-                        android:scaleType="fitXY"
+                        android:layout_width="150dp"
                         android:layout_marginLeft="5dp"
                         android:layout_height="150dp"
+                        android:id="@+id/bike4"
                         android:src="@drawable/bike4"/>
 
                 </LinearLayout>
@@ -111,6 +111,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:background="@color/gray"
+            android:layout_marginTop="-20dp"
             android:layout_height="40dp">
             <TextView
                 android:layout_width="wrap_content"
@@ -172,7 +173,6 @@
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:scrollbars="none"
-            android:layout_marginBottom="30dp"
             android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="wrap_content"
