--- a/CafeRiders/app/src/main/res/layout/bike_list_item.xml
+++ b/CafeRiders/app/src/main/res/layout/bike_list_item.xml
@@ -10,7 +10,7 @@
         android:background="@color/white"
         android:layout_height="wrap_content">
         <ImageView
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:src="@drawable/bike1"
             android:layout_height="wrap_content" />
         <LinearLayout
@@ -43,6 +43,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="30dp"
                 android:textStyle="bold"
+                android:id="@+id/btn_book_now"
                 android:layout_marginBottom="20dp"
                 android:text="Book Now"/>
         </LinearLayout>
