--- a/CafeRiders/app/src/main/res/layout/happy_customer_item.xml
+++ b/CafeRiders/app/src/main/res/layout/happy_customer_item.xml
@@ -20,7 +20,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/dummy_user"/>
+                android:src="@drawable/face_profile"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
