--- a/CafeRiders/app/src/main/res/layout/header.xml
+++ b/CafeRiders/app/src/main/res/layout/header.xml
@@ -12,6 +12,7 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:src="@drawable/menu"
+            android:id="@+id/menu_click"
             android:layout_marginLeft="10dp"/>
         <TextView
             android:layout_width="wrap_content"
