--- a/CafeRiders/app/src/main/res/layout/normal_header.xml
+++ b/CafeRiders/app/src/main/res/layout/normal_header.xml
@@ -11,7 +11,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:src="@drawable/arrow_left_thick"
+            android:src="@drawable/arrow_left"
             android:tint="@color/white"
             android:layout_marginLeft="10dp"/>
         <TextView
