--- a/CafeRiders/app/src/main/res/values/colors.xml
+++ b/CafeRiders/app/src/main/res/values/colors.xml
@@ -2,13 +2,13 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#BE1E2D</color>
+    <color name="colorAccent">#811721</color>
     <color name="black">#000000</color>
-    <color name="transparent_black">#7f000000</color>
+    <color name="transparent_black">#86ffffff</color>
     <color name="white">#FFFFFF</color>
     <color name="orange">#F27E11</color>
     <color name="gray">#6c6b6a</color>
-    <color name="maroon">#BE1E2D</color>
+    <color name="maroon">#811721</color>
     <color name="background">#f2f2f2</color>
     <color name="background2">#f3f3f3</color>
     <color name="background3">#d6d2d2</color>
